@@ -1,5 +1,6 @@
 -e .[testutil]
 # astroid dependency is also defined in setup.cfg
 astroid==2.9.3  # Pinned to a specific version for tests
+typing-extensions~=4.0
 pytest~=7.0
 pytest-benchmark~=3.4
