@@ -1,0 +1,3 @@
+[master]
+py-version=3.7
+load-plugins=pylint.extensions.typing
